--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "author": "EJ",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0"
+    "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^14.14.37",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "@types/node": "^17.0.23",
+    "npm-check-updates": "^12.5.4",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
